# ChatRoom

./: .gitignore  1.cc  2.cc  2.h  3.cc  mail_send  mail_sender  makefile  myredis  server.h
Study/: Redis.md
Study/Protobuf/: ProtoBuf.md
Study/Protobuf/Proto3/: contacts.pb.cc  contacts.pb.h  contacts.proto  makefile  read  read.cc  write  write.cc
Study/Protobuf/Proto3/Test/: test_enum.pb.h  (+2 more)
Study/Protobuf/Test/: TestPB  contacts.proto  contacts2.proto  main.cc  phone2.proto
Study/study1/: 1.cc
chatroom_1/: CMakeLists.txt
chatroom_1/Proto/: dump.rdb  user_auth.pb.cc  user_auth.pb.h  user_auth.proto  user_chat.pb.cc  user_chat.pb.h  user_chat.proto  user_friends.pb.cc  user_friends.pb.h  user_friends.proto
chatroom_1/TEST/: S+R  all  step  user
chatroom_1/src/Client/: main.cc
chatroom_1/src/Client/UserAuth/: User_auth_c.cc
chatroom_1/src/Client/UserChat/: User_chat.cc  recv_friends.cc  recv_groups.cc  send_friends.cc  send_groups.cc
chatroom_1/src/Client/UserFile/: FTP_client.cc
chatroom_1/src/Client/include/: FTP_client.h  User_auth_c.h  User_chat.h  tools.h
chatroom_1/src/Client/tools/: tools.cc
chatroom_1/src/Page/: user_page.cc
chatroom_1/src/Server/: main.cc
chatroom_1/src/Server/FTP_server/connect/: Dataconnect.cc
chatroom_1/src/Server/Manage/: User_manager.cc  messageCenter.cc
chatroom_1/src/Server/Reactor/: worker.cc
chatroom_1/src/Server/Redis/: RedisClient.cc  RedisClient.h  RedisKeys.h
chatroom_1/src/Server/UserAuth/: User_auth_s.cc
chatroom_1/src/Server/include/: MasterServer.h  User_auth_s.h  User_manager.h  WorkerServer.h  connection.h  messageCenter.h  protocol.h
chatroom_1/src/Server/net/: MasterServer.cc  connection.cc
chatroom_1/src/Server/tools/: protocol.cc
chatroom_1/src/include/: include.cc  include.h  protocol.h  user_page.h
chatroom_1/src/tools/: protocol.cc  user_page.cc
